<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_notice"
        android:icon="@drawable/notice"
        android:title="@string/title_notice" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/homeicon"
        android:title="@string/title_game" />
    <item
        android:id="@+id/navigation_career"
        android:icon="@drawable/career"
        android:title="@string/title_career" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>
