<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:background="@drawable/bar"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:text="Contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <ImageView
            android:clickable="true"
            android:id="@+id/close"
            android:layout_marginTop="5dp"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:src="@drawable/close"
            android:focusable="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/background"
        android:layout_below="@id/rl1"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/IV1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/game_icon"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V 2.12.12"
            android:textColor="@color/icon"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/IV1.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/high_light_sng"
            android:adjustViewBounds="true"/>
            <LinearLayout
                android:id="@+id/llemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:paddingTop="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/email"
                    android:layout_marginStart="40dp"/>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

        <ImageView
            android:id="@+id/IV1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/high_light_sng"
            android:adjustViewBounds="true"
            android:layout_marginTop="3dp"
            android:layout_below="@id/IV1.1"/>
            <LinearLayout
                android:paddingTop="14dp"
                android:id="@+id/llfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llemail">
                <ImageView
                    android:paddingTop="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/fb"
                    android:layout_marginStart="40dp"/>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

        <ImageView
            android:id="@+id/IV1.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/high_light_sng"
            android:adjustViewBounds="true"
            android:layout_marginTop="3dp"
            android:layout_below="@id/IV1.2"/>
            <LinearLayout
                android:paddingTop="16dp"
                android:id="@+id/lltwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llfb">
                <ImageView
                    android:paddingTop="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/tw"
                    android:layout_marginStart="40dp"/>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

        <ImageView
            android:id="@+id/IV1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/high_light_sng"
            android:adjustViewBounds="true"
            android:layout_marginTop="3dp"
            android:layout_below="@id/IV1.3"
            android:layout_marginBottom="5dp"/>
            <LinearLayout
                android:paddingTop="18dp"
                android:id="@+id/llwechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lltwitter">
                <ImageView
                    android:paddingTop="5dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/wechat"
                    android:layout_marginStart="40dp"/>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poker"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
